fix: no scrollbar actually works now

--- a/ui/src/app.css
+++ b/ui/src/app.css
@@ -12,3 +12,21 @@
     border-color: black;
     font-weight: bold;
 }
+
+.dark {
+    color-scheme: dark;
+}
+
+.no-scrollbar {
+    overflow-y: scroll;
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none;  /* IE 10+ */
+}
+
+.no-scrollbar::-webkit-scrollbar { /* WebKit */
+    width: 0px;
+}
+
+.no-scrollbar {
+    scrollbar-color: transparent transparent;
+}
